Enable jdk9 build, fix remaining issues (#852)